recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not found: value spiral
return spiral(steps-1, angle, length+shrink, shrink)
       ^